fix bug of delete proj
